--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             select.style.display = 'none';
 
             input.selectionStart = 0;
-            input.selectionEnd = this.value.length;
+            input.selectionEnd = input.value.length;
 
         }
 
